# depend

./: .gitignore  CONTRIBUTING.md  PLAN.md  README.md  mkdocs.yml  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: ci.yml  pages.yml
agents/: AGENTS.md  README.md
agents/commands/: bootstrap.md  implement-checked.md  implement-mypy-plugin.md  implement-runtime-refinements.md  implement-sized.md  run-validation.md
agents/context/: depend-plan.md  plugin-scope.md
agents/hooks/: check-mypy-fixtures.sh  check-runtime.sh  preflight.sh
agents/rules/: 01-project-scope.md  02-runtime-architecture.md  03-static-plugin.md  04-symbolic-expressions.md  05-python-style.md  06-testing.md  07-docs.md
agents/templates/: handoff.md  pr-summary.md
agents/workflows/: new-feature.md  plugin-feature.md
docs/: checked-functions.md  examples.md  index.md  limitations.md  mypy-plugin.md  numpy-shapes.md  proofs.md  refinements.md  registries.md  sized-collections.md  vscode-hover.md
editor/depend-hover/: README.md  extension.js  package.json
examples/: README.md  checked_functions.py  numpy_shapes.py  proofs.py  refinements.py  registries.py  sized_collections.py
scripts/: hover_type.py  install-git-hooks.sh
src/depend/: __init__.py  checked.py  context.py  dataclasses.py  errors.py  expressions.py  predicates.py  proofs.py  refined.py  registry.py  sized.py  validate.py
tests/: mypy.ini
tests/mypy/: test_mypy_plugin.py
tests/runtime/: test_checked.py  test_dataclasses.py  test_numpy.py  test_proofs.py  (+3 more)
(+15 files in other folders)
